--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#   INCLUDE_DIRS include
+   INCLUDE_DIRS include
 #  LIBRARIES endohap
    CATKIN_DEPENDS phantom_omni
 #  DEPENDS system_lib
@@ -112,7 +112,7 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-# include_directories(include)
+include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
@@ -128,7 +128,7 @@ include_directories(
 # add_dependencies(endohap ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-add_executable(endohap_node src/endohap.cc)
+add_executable(endohap_node src/endohap.cc src/Endowrist.cc src/PhantomOmni.cc)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
